# snh48-mcp-server

./: .gitignore  CI_SUMMARY.md  CONTRIBUTING.md  COPILOT_AGENT_IMPLEMENTATION.md  README.md  SKILL.md  pyproject.toml  test_skills.py  宋昕冉风格特点调研报告.docx
.github/: COPILOT_AGENT_GUIDE.md  GH_COPILOT_CLI_GUIDE.md  WORKFLOW_SETUP.md
.github/workflows/: copilot-advanced-agent.yml  copilot-agent-review.yml  copilot-cli-agent.yml  copilot-review.yml  copilot-skill-review.yml  gh-copilot-ask.yml  gh-copilot-review.yml  test.yml
live-transcriber/: SKILL.md
live-transcriber/references/: api_reference.md
live-transcriber/scripts/: extract_live.py  transcribe.py
openai-app/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
openai-app/api/: img.ts  mcp.ts
openai-app/public/: index.html
openai-app/src/: mcp-server.ts  server.ts
openai-app/src/lib/: members.ts  photo.ts  shows.ts
openai-app/src/widgets/: bootstrap.ts  members.ts  shows.ts
snh48_mcp/: member_db.py  server.py  show_db.py  skill_tools.py
src/snh48_mcp/: member_db.py  server.py
