[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "snh48-agent-skill"
version = "0.2.0"
description = "SNH48 Agent Skill - 成员信息查询与刷新"
requires-python = ">=3.11"
dependencies = [
    "requests",
]

[project.scripts]
snh48-skill = "snh48_mcp.skill_tools:main"

[tool.setuptools.packages.find]
where = ["."]
